--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <a href="page2.html">Page 2 Here</a>
+<a href="math.html">Math Here</a>
 </body>
 </html>
