--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="page2.html">Page 2 Here</a>
-<a href="math.html">Math Here</a>
+<p><a href="page2.html">Page 2 Here</a></p>
+<p><a href="math.html">Math Here</a></p>
 </body>
 </html>
