--- a/math.html
+++ b/math.html
@@ -21,6 +21,7 @@ MathJax = {
 <body>
 <h1>Math</h1>
 <a href="index.html">Page 1 Here</a>
-$ /int^{1}_{0}x^{2} dx = /frac{1}{3} $
+When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 </body>
 </html>
