--- a/math.html
+++ b/math.html
@@ -8,6 +8,7 @@
 </script>
 </head>
 <body>
+<h1>Quadratic Formula</h1>
 When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
 $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 </body>
