--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -16,13 +16,13 @@
     </p>
 
     <p>
-        <a href="page2.html" title="My second page!" target="_self">
+        <a href="pages/page2.html" title="My second page!" target="_self">
             Page 2 Here
         </a>
     </p>
 
     <p>
-        <a href="../math-files/math.html" title="Math" target="_blank">
+        <a href="math-files/math.html" title="Math" target="_blank">
             Math Here
         </a>
     </p>
