--- a/pages/page2.html
+++ b/pages/page2.html
@@ -20,7 +20,7 @@
     </p>
 
     <p>
-        <a href="index.html">
+        <a href="../index.html">
             Page 1 Here
         </a>
     </p>
