--- a/math-files/math.html
+++ b/math-files/math.html
@@ -14,6 +14,6 @@
   </h1>
   When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
   $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
-  <a href="../pages/index.html">Back to home</a>
+  <a href="../index.html">Back to home</a>
   </body>
 </html>
