--- a/pages/page2.html
+++ b/pages/page2.html
@@ -2,7 +2,11 @@
 <html lang="en-US">
 
 <head>
+    <title>Jacob Mason : 2</title>
     <link rel="stylesheet" href="../styles.css">
+    <meta charset="UTF-8">
+    <meta name="author" content="Jacob Mason">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -21,7 +25,7 @@
 
     <p>
         <a href="../index.html">
-            Page 1 Here
+            Back to Home
         </a>
     </p>
     
