--- a/index.html
+++ b/index.html
@@ -2,30 +2,53 @@
 <html lang="en-US">
 
 <head>
+    <title>Jacob Mason : Home</title>
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="author" content="Jacob Mason">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Jacob Mason">
+    <meta name="description" content="Jacob Mason">
+    <script>
+        function printDate() {
+            document.getElementById('demo').innerHTML = Date();
+        }
+        function changeBG() {
+            document.getElementById("bg").style.backgroundColor = "red";
+        }
+    </script>
 </head>
 
-<body>
+<body id="bg">
 
     <h1>
-        Hello World
+        Hello Internet!
     </h1>
 
-    <p>
-        I'm hosted with GitHub Pages.
-    </p>
+    <div class="math">
 
-    <p>
-        <a href="pages/page2.html" title="My second page!" target="_self">
-            Page 2 Here
-        </a>
-    </p>
+        <p>
+            <image src="gallery/jacobmason.jpg" alt="Jacob Mason" style="width:274px;height:300px;">
+                Jacob Mason
+        </p>
 
-    <p>
-        <a href="math-files/math.html" title="Math" target="_blank">
-            Math Here
-        </a>
-    </p>
+        <p id="page2">
+            <a href="pages/page2.html" title="My second page!" target="_self">
+                Page 2 Here
+            </a>
+        </p>
+
+    </div>
+
+    <iframe src="math-files/math.html" title="Math" style="height:540px;width:960px;border:none;"></iframe>
+
+    <button type="button"
+    onclick="changeBG()">
+    Clcik me Break the world.</button>
+
+    <img src="gallery/jacobmason.jpg" style="width:200px;height:200px" onclick="printDate()">
+
+    <p id="demo"></p>
 
 </body>
 
