--- a/index.html
+++ b/index.html
@@ -2,61 +2,21 @@
 <html lang="en-US">
 
 <head>
-    <title>Jacob Mason : Home</title>
+    <title>Jacob Mason</title>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="author" content="Jacob Mason">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Jacob Mason">
     <meta name="description" content="Jacob Mason">
-    <script>
-        function printDate() {
-            document.getElementById('demo').innerHTML = Date();
-        }
-        function changeBG() {
-            if(document.getElementById("bg").style.backgroundColor == "red")
-            {
-                document.getElementById("bg").style.backgroundColor = "powderblue";
-            }
-            else
-            {
-                document.getElementById("bg").style.backgroundColor = "red";
-            }
-            
-        }
-    </script>
+    
 </head>
 
-<body id="bg">
+<body>
 
-    <h1>
-        Hello Internet!
-    </h1>
-
-    <div class="math">
-
-        <p id="name">
-            <image src="gallery/jacobmason.jpg" alt="Jacob Mason" style="width:274px;height:300px;">
-                Jacob Mason
-        </p>
-
-        <p id="page2">
-            <a href="pages/page2.html" title="My second page!" target="_self">
-                Page 2 Here
-            </a>
-        </p>
-
-    </div>
-
-    <iframe src="math-files/math.html" title="Math" style="height:540px;width:960px;border:none;"></iframe>
-
-    <button type="button"
-    onclick="changeBG()">
-    Clcik me Break the world.</button>
-
-    <img src="gallery/jacobmason.jpg" style="width:200px;height:200px" onclick="printDate()">
-
-    <p id="demo"></p>
+	<center>
+        Coming Soon
+	</center>
 
 </body>
 
