--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en-US">
 
 <head>
-    <title>Jacob Mason</title>
+    <title>JakeMath</title>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="author" content="Jacob Mason">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Jacob Mason">
-    <meta name="description" content="Jacob Mason">
     
 </head>
 
 <body>
 
-	<center>
-		<p>
-        Coming Soon
-		</p>
-	</center>
+	<section id="header">
+		<div class="container">
+			<img src="images/jakemath.svg" class="logo">
+			<div class="headertextcontainer">
+				<h1 class="headertext">Welcome to JakeMath</h1>
+			</div>
+		</div>
+	</section>
 
 </body>
 
